// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FancyInputComponent should render the highlights correctly based on the matched variables in text 1`] = `
<app-fancy-input>
  <div
    class="fancy-input-container"
  >
    <input
      class="fancy-input-content fancy-input-element"
      placeholder=""
      type="text"
    />
    <div
      class="fancy-input-backdrop"
    >
      <div
        class="fancy-input-content fancy-input-highlights"
      >
        <span>
          some text 
        </span>
        
        
        
        
        <app-fancy-input-marker />
        
        
        <span>
           then 
        </span>
        
        
        
        
        <app-fancy-input-marker />
        
        
        <span>
           is next
        </span>
        
        
        
        
      </div>
    </div>
  </div>
</app-fancy-input>
`;

exports[`FancyInputComponent should set component value when input value changes 1`] = `
<app-fancy-input>
  <div
    class="fancy-input-container"
  >
    <input
      class="fancy-input-content fancy-input-element"
      placeholder=""
      type="text"
    />
    <div
      class="fancy-input-backdrop"
    >
      <div
        class="fancy-input-content fancy-input-highlights"
      >
        <span>
          some text
        </span>
        
        
        
        
      </div>
    </div>
  </div>
</app-fancy-input>
`;
